[metadata]
name = kable-python-flask
version = 2.2.2
author = Kable
author_email = contact@kableapi.com
description = Kable Python Flask SDK
long_description = file: README.md
long_description_content_type = text/markdown
url = https://dev.kableapi.com
project_urls =
    Bug Tracker = https://github.com/KableAPI/kable-python-flask-sdk/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
