[metadata]
name = kable-python-flask
version = 3.0.0
author = Kable
author_email = contact@kable.io
description = Kable Python Flask SDK
long_description = file: README.md
long_description_content_type = text/markdown
url = https://kable.io
project_urls =
    Bug Tracker = https://github.com/Kable-io/kable-python-flask-sdk/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

install_requires =
    Flask
    requests
    cachetools

[options.packages.find]
where = src
